--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=steps-api
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=steps
+openapi.dev-url=http://localhost:8080
+openapi.prod-url=https://example.com
